hphp/hack/test/typecheck/trait_reuse/trait_reuse_cyclic.php.like_types.exp
File "trait_reuse_cyclic.php", line 5, characters 7-17:
Cyclic class definition : `ReusedTrait` `OtherTrait`  (Typing[4013])
File "trait_reuse_cyclic.php", line 19, characters 7-17:
Traits with final methods cannot be reused, and `ReusedTrait` is already used by `MyParent`. (Typing[4186])
File "trait_reuse_cyclic.php", line 14, characters 7-14:
`MyParent` is defined here
File "trait_reuse_cyclic.php", line 15, characters 7-17:
`MyParent` uses `ReusedTrait`
File "trait_reuse_cyclic.php", line 11, characters 7-17:
`ReusedTrait` uses `ReusedTrait`
File "trait_reuse_cyclic.php", line 11, characters 7-17:
`ReusedTrait` uses `ReusedTrait`
File "trait_reuse_cyclic.php", line 6, characters 25-27:
`ReusedTrait` has a final method `foo`
